# gonl-sv

./: CMakeLists.txt  README.md  Snakefile  config.h  config.h.in
.snakemake/code_tracking/: ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5hMC4wNC5oYXBsb3R5cGVz  ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5jaHIxLmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE2LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE5LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE5LmEwLjA0LmZpbHRlcmVkLmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE5LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjQuYTAuMDQuZmlsdGVyZWQuZ3dhcy5oYXBsb3R5cGVz  ZGF0YS9nd2FzX2NhdGFsb2d1ZS50eHQ=  ZGF0YS9zbnBfZGF0YS5hcnJheQ==  cmVzdWx0cy90YWctc25wcy9kZWxldGlvbnMucGFyZW50cy5jaHIxOS5hMC4wNF8wLjA0LlIyMC44LnAwLjA1LnRhZ3NucHM=  cmVzdWx0cy9zbnAtZGVsZXRpb24tcGFpcnMvc25wX2RlbGV0aW9uLnBhcmVudHMuY2hyMTguYTAuMDRfMC4wNC5wYWlycw==
.snakemake/input_tracking/: L2V4cG9ydC9zY3JhdGNoMy9kaWprc3RyYS9nb25sLXN2L3Jlc3VsdHMvc25wLWRlbGV0aW9uLXBhaXJzL3NucF9kZWxldGlvbi5wYXJlbnRzLmNocjMuYTAuMDRfMC4wNC5wYWlycw==  ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5hMC4wNC5oYXBsb3R5cGVz  ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5jaHI5LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLWRlbGV0aW9ucy9kZWxldGlvbnMucGFyZW50cy5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE0LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGFwbG90eXBlcw==  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE0LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE0LmEwLjA0LmZpbHRlcmVkLmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE0LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE1LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGFwbG90eXBlcw==  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE1LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE1LmEwLjA0LmZpbHRlcmVkLmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE1LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE2LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGFwbG90eXBlcw==  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE2LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE2LmEwLjA0LmZpbHRlcmVkLmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE2LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE3LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGFwbG90eXBlcw==  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE3LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE3LmEwLjA0LmZpbHRlcmVkLmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE3LmEwLjA0LmhhcGxvdHlwZXM=  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE4LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGFwbG90eXBlcw==  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE4LmEwLjA0LmZpbHRlcmVkLmd3YXMuaGcxOS5oYXBsb3R5cGVz  ZGF0YS9nb25sLXNucHMvc25wcy5wYXJlbnRzLmNocjE4LmEwLjA0LmhhcGxvdHlwZXM=  (+92 more)
data/: GWAS_catalogue_caucasian_SNPIDs.alleles.txt  gwas_catalogue.txt
matlab/: plotAllSampleResults.m  plotHist.m  plotSampleResults.m
python/: Variant.py
src/: CMakeLists.txt  haplotypes.c  haplotypes.h  imputation_input.c  imputation_input.h  imputation_main.c  snp_deletion_pair_input.c  snp_deletion_pair_input.h  snp_deletion_pair_main.c  tagsnps_input.c  tagsnps_input.h  tagsnps_main.c
(+99 files in other folders)
